# shaiya-library

./: .gitignore  CMakeLists.txt  README.md
api/: .gitignore  App.config  Program.cs  README.md  ShaiyaWebApi.csproj  (+2 more)
shaiya/: CMakeLists.txt
shaiya/include/logging/: log.hpp
shaiya/include/shaiya/: DbAgent.hpp  HookType.hpp  World.hpp
shaiya/include/shaiya/api/: Api.hpp
shaiya/include/shaiya/hooks/character/: Combination.hpp  CombinationType.hpp  ItemCreation.hpp  ItemSetSynergy.hpp  Synergy.hpp
shaiya/include/shaiya/hooks/command/: Command.hpp  CommandManager.hpp
shaiya/include/shaiya/hooks/command/impl/: PlayerTeleportCommand.hpp
shaiya/include/shaiya/models/: CGuild.hpp  CItem.hpp  CParty.hpp  CUser.hpp  Craftname.hpp  Model.hpp  NexonBoolean.hpp  VariableString.hpp  stItemInfo.hpp
shaiya/include/shaiya/models/cups/: Cups.hpp  List.hpp
shaiya/include/shaiya/models/db/: ItemCraftnameUpdate.hpp  ItemLapisUpdate.hpp
shaiya/include/shaiya/models/packets/: AccountPoints.hpp  ItemCreationPacket.hpp  Notice.hpp
shaiya/include/shaiya/utils/: Hook.hpp  NumberConversion.hpp  csv.hpp  toml.hpp
shaiya/src/: Main.cpp
shaiya/src/logging/: log.cpp
shaiya/src/shaiya/: DbAgent.cpp  World.cpp
shaiya/src/shaiya/api/: Api.cpp
shaiya/src/shaiya/hooks/: CharacterHooks.cpp  WorldHooks.cpp
shaiya/src/shaiya/hooks/character/: ItemCreation.cpp  ItemSetSynergy.cpp
shaiya/src/shaiya/hooks/command/: CommandManager.cpp
shaiya/src/shaiya/hooks/command/impl/: PlayerTeleportCommand.cpp
shaiya/src/shaiya/models/: CUser.cpp
shaiya/src/shaiya/utils/: Hook.cpp
(+13 files in other folders)
